data/derived/sp14/progs/unify/prog3227.ml.out
Characters 56-57:
  x a
  ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
